--- a/c/kernel/Makefile
+++ b/c/kernel/Makefile
@@ -1,5 +1,5 @@
 #KDIR := /lib/modules/$(shell uname -r)/build
-KDIR := /usr/src/kernels/3.10.0-1160.24.1.el7.x86_64/
+KDIR := /usr/src/kernels/$(shell uname -r)/
 PWD  := $(shell pwd)
 
 obj-m := kernel_hello.o
